--- a/_works/2016-12-22-blue-lake.markdown
+++ b/_works/2016-12-22-blue-lake.markdown
@@ -8,8 +8,8 @@ tags:
   - Lake
   - Water
 image: https://s3.amazonaws.com/kinlane-productions/algo-rotoscope/working/blue-lake.png
-video: ttps://www.youtube.com/embed/L0c_rNCyDDk
+video: ttps://www.youtube.com/embed/ce5cWoImWsM
 square: https://s3.amazonaws.com/kinlane-productions/algo-rotoscope/working/blue-lake-square.png
 ---
-<center><iframe width="660" height="415" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="853" height="505" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe></center>
 <center>Hight above the lake, rolling along the shore.</center>
