--- a/_works/2016-12-22-frog-pond.markdown
+++ b/_works/2016-12-22-frog-pond.markdown
@@ -7,8 +7,8 @@ tags:
   - Algorotoscope Works
   - Pond
 image: https://s3.amazonaws.com/kinlane-productions/algo-rotoscope/working/frog-pond.png
-video: https://www.youtube.com/embed/qD5tAXCyZlk
+video: https://www.youtube.com/embed/b48HOFN1cbw
 square: https://s3.amazonaws.com/kinlane-productions/algo-rotoscope/working/frog-pond-square.png
 ---
-<center><iframe width="660" height="415" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="853" height="505" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe></center>
 <center>Hovering low above frog ponds.</center>
