--- a/_works/2016-12-22-tunnel.markdown
+++ b/_works/2016-12-22-tunnel.markdown
@@ -9,8 +9,8 @@ tags:
   - Tunnel
   - Bushes
 image: https://s3.amazonaws.com/kinlane-productions/algo-rotoscope/working/tunnel.png
-video: https://www.youtube.com/embed/ME45yg_2Iww
+video: https://www.youtube.com/embed/P7R11jEjHQA
 square: https://s3.amazonaws.com/kinlane-productions/algo-rotoscope/working/tunnel-square.png
 ---
-<center><iframe width="660" height="415" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe></center>
+<center><iframe width="853" height="505" src="{{ page.video }}" frameborder="0" allowfullscreen></iframe></center>
 <center>Moving through the low tunnel in the redwood forest.</center>
